--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,8 @@
         "esModuleInterop": true,
         "strictNullChecks": true,
         "target": "ES2022",
-        "moduleResolution": "bundler",
-        "module": "ESNext",
+        "moduleResolution": "node16",
+        "module": "node16",
         "skipLibCheck": true,
         "declaration": true,
         "isolatedModules": true,
