--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,17 +4,16 @@
         "noImplicitAny": true,
         "esModuleInterop": true,
         "strictNullChecks": true,
-        "target": "ES2022",
+        "target": "ES6",
         "moduleResolution": "node16",
         "module": "node16",
-        "skipLibCheck": true,
         "declaration": true,
         "isolatedModules": true,
         "noEmit": true,
-        "outDir": "dist",
         "forceConsistentCasingInFileNames": true,
-
+        "outDir": "./dist",
+        "rootDir": "./src"
     },
     "include": ["src"],
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules"],
 }
